Z-index fix
did what you told me to

--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@
   margin-left:0.25px;
   left:15px;
   top:165px;
-  z-index:0;
+  z-index:1;
 }
 #itemarea{
   display:inline-block;
@@ -30,7 +30,7 @@
   position:relative;
   height:32px;
   width:32px;
-  z-index:1;
+  z-index:2;
   margin-right:0px;
 }
 #hotbar{
@@ -42,6 +42,9 @@
 }
 .items:hover{
   opacity:0.6;
+}
+.hotbararea:hover{
+	z-index:10;
 }
 .numbers{
   display:inline;
